# Machine-Learning-with-Python-Upgrade-2026

./: .gitignore  MIGRATION_UV.md  README.md  README_UPGRADE  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: AIRBNB_PRICE_PREDICTION.md  DOCKER_INFO.md  GITHUB_ACTIONS.md  ML_WORKFLOW.md  MOVIES_PREDICT_NANS.md  MOVIES_STRATIFIED_SAMPLE.md  PYSPARK_TFIDF.md
notebooks/movies/: Movies_Machine_Learning_Predict_NaNs.ipynb  Movies_Machine_Learning_StratifiedSample.ipynb
scripts/: Sklearn_MachineLearning_AirBnB.py
tests/: test_basic.py
